<resources>
    <string name="app_name">iscom</string>
    <string name="action_settings">Settings</string>
    <string name="imgOne">img 1</string>
    <string name="imgTwo">img 2</string>
    <string name="imgTree">img 3</string>
    <string name="activity_one">Activity One</string>
    <string name="activity_two">Activity Two</string>
    <string name="activity_tree">Activity Tree</string>
    <string name="activity_principal">Activity Principal</string>
    <string name="save">Save</string>
    <string name="to_do_title">To Do Title</string>
    <string name="enter_a_to_do">Enter a to do ...</string>
    <string name="to_do_list">To Do List</string>


    <string name="title_text">CalCounter</string>
    <string name="hint_food">What did you eat?</string>
    <string name="hint_calories">Calories Count</string>
    <string name="submit_text">Submit</string>
    <string name="delete_item">Delete Item</string>
    <string name="share_title">Share</string>
    <string name="food_total_text">Total Calories:</string>
    <string name="cal_text">Cal.</string>
    <string name="food_items_num">Food Items:</string>
    <string name="title_activity_display_foods">DisplayFoodsActivity</string>
    <string name="title_activity_food_item_details">FoodItemDetailsActivity</string>
    <string name="imgFour">img 4</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="Click">Click</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="img">this is an imag</string>
    <string name="EnterNumber">Enter Number</string>
    <string name="Converte">Convert</string>
    <string name="Converted_Currency">Converted Currency</string>
    <string name="Currency_Convert">Currency Convert</string>
    <string name="Random_Game">Random Game</string>
    <string name="Start">Start</string>
    <string name="Result">Result</string>
</resources>
