<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="is.com.Test">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/id_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:onClick="clickAction"
            android:text="@string/Click" />

        <EditText
            android:id="@+id/id_EditText_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/id_but"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/id_EditText_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/id_EditText_Name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:inputType="textPassword" />

        <ImageView
            android:id="@+id/id_imageView_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="117dp"
            android:contentDescription="@string/img"
            app:srcCompat="@drawable/img_a" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
